@@ -164,7 +164,10 @@ SCIP_DECL_PRESOLEXEC(presolExecTrivial)
 #ifdef FIXSIMPLEVALUE
             fixval = SCIPselectSimpleValue(lb - 0.9 * SCIPepsilon(scip), ub + 0.9 * SCIPepsilon(scip), MAXDNOM);
 #else
-            fixval = (lb + ub)/2;
+            /* prefer integral values (especially 0) over midpoint */
+            fixval = SCIPround(scip, lb);
+            if( fixval < lb || fixval > ub )
+               fixval = (lb + ub)/2;
 #endif
             SCIPdebugMsg(scip, "fixing continuous variable <%s>[%.17f,%.17f] to %.17f\n", SCIPvarGetName(vars[v]), lb, ub, fixval);
             SCIP_CALL( SCIPfixVar(scip, vars[v], fixval, &infeasible, &fixed) );
